--- a/3. 录制音频/VoiceMemoDemo/VoiceMemoDemo/Info.plist
+++ b/3. 录制音频/VoiceMemoDemo/VoiceMemoDemo/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请求麦克风,录制音频权限</string>
 </dict>
 </plist>
